# QQ-Ad-Bot-Based-on-Keyword-Detection

./: .gitignore  README.md  requirements.txt  start.bat  start.py
LLOneBot/: pmhq_config.json
LLOneBot/data/: config_3812950563.json  webui_token.txt
LLOneBot/data/database/: 3812950563.v2.db
LLOneBot/llonebot/: llonebot.js  llonebot.js.map
LLOneBot/llonebot/webui/: index.html
LLOneBot/llonebot/webui/assets/: index-Bl-NrNUN.js  index-DaqFU7JR.css
QQBotConfig/backend/: pom.xml
QQBotConfig/backend/src/main/java/com/qqbot/: QQBotConfigApplication.java
QQBotConfig/backend/src/main/java/com/qqbot/controller/: ConfigController.java
QQBotConfig/backend/src/main/java/com/qqbot/model/: BotConfig.java  GlobalConfig.java  TargetGroup.java
QQBotConfig/backend/src/main/java/com/qqbot/resources/: config.json
QQBotConfig/backend/src/main/java/com/qqbot/service/: ConfigService.java
QQBotConfig/frontend/: index.html  package-lock.json  package.json  vite.config.js
QQBotConfig/frontend/src/: App.vue
QQBotConfig/frontend/src/views/: ConfigEditor.vue
maven396/conf/: settings.xml
qqbot/: .env  .env.prod  bot.py  pyproject.toml
qqbot/plugins/keywords_sender/: __init__.py
